# EmployeeManagement

./: .README.md.swp  .gitignore  Makefile  README.md  compose.yaml  requirements.txt  requirements_dev.txt
app/: manage.py  pyproject.toml
app/core/: settings.py  urls.py  wsgi.py
app/manager/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
app/manager/migrations/: 0001_initial.py  0002_feira_alter_employee_id.py
app/tests/unit/: conftest.py  test_api_manager.py
core/: settings.py  urls.py  wsgi.py
manager/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
manager/migrations/: 0001_initial.py
tests/unit/: conftest.py  test_api_manager.py
