[project]
name = "employeemanagement"
version = "0.1.0"
description = "Consolidated Enterprise CRUD API for Employees and Feiras"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Rocky Shimithy" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: Django",
    "Intended Audience :: Developers",
]

# Modern Production Stack (Core App Requirements)
dependencies = [
    "django>=6.0,<7.0",
    "djangorestframework>=3.17,<4.0",
    "django-filter>=25.1",
    "whitenoise>=6.6.0",              # Serves production static files efficiently without needing an external Nginx server
    "django-cors-headers>=4.3.0",     # Securely allows external frontend applications to make API requests to this backend
    "python-decouple>=3.8",           # Pulls sensitive environment variables and API secret keys out of the raw source code
    "dj-database-url>=2.1.0",         # Utility to parse database connection URLs
    "psycopg2-binary>=2.9.9",         # Native PostgreSQL adapter database engine
]

# Modern Development & Test Stack
[dependency-groups]
dev = [
    # --- Testing & Factories ---
    "pytest>=8.2.0",                 
    "pytest-django>=4.8.0",    
    "pytest-cov>=5.0.0",       
    "factory-boy>=3.3.0",            
    
    # --- Debugging & Shell ---
    "ipython>=8.20.0",                
    "ipdb>=0.13.13",                 

    # --- Code Quality / Linting ---
    "ruff>=0.4.0",    
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
# Enables Pyflakes (F), E/W errors (E), and Isort (I) plugin rules natively
select = ["E", "F", "I", "W"] 

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--cov=app --cov-report=term-missing"
